<resources>
    <string name="str_auto_adjust">Auto Adjust</string>
    <string name="app_name">Tvsetting</string>
    <string name="str_pic_picture_adjustment">Imageadjust</string>
    <string name="str_pic_picture">Picture</string>
    <string name="str_pic_picturemode">Picture Mode</string>
    <string-array name="str_arr_pic_picturemode_vals">
        <item>lightness</item>
        <item>standard</item>
        <item>soft</item>
        <item>user</item>
        
    </string-array>
    <string name="str_pic_contrast">Contrast</string>
    <string name="str_pic_brightness">Brightness</string>
    <string name="str_pic_color">Color</string>
    <string name="str_pic_sharpness">Sharpness</string>
    <string name="str_pic_hue">Hue</string>
    <string name="str_pic_saturation">Saturation</string>
    <string name="str_pic_backlight">Back Light</string>
    <string name="str_pic_colortemperature">Color Temperature</string>
    <string-array name="str_arr_pic_colortemperature_vals">
        <item>cold</item>
        <item>standard</item>
        <item>warm</item>
    </string-array>
    <string name="str_pic_zoommode">Zoom Mode</string>
    <string-array name="str_arr_pic_zoommode_vals">
        <item>Default</item>
        <item>16:9</item>
        <item>4:3</item>
        <item>Auto</item>
        <item>Panorama Mod</item>
        <item>Just Scan</item>
        <item>Zoom1</item>
        <item>Zoom2</item>
        <item>14:9</item>
        <item>P2P</item>
    </string-array>
    <string name="str_pic_imgnoisereduction">Image Noise Reduction</string>
    <string name="str_pic_mpegnoisereduction">MPEG Noise Reduction</string>
    <string-array name="str_arr_pic_imgnoisereduction_vals">
        <item>Off</item>
        <item>weak</item>
        <item>Middle</item>
        <item>Strong</item>
        <item>Auto</item>
    </string-array>
    <string-array name="str_arr_pic_mpegnoisereduction_vals">
        <item>Off</item>
        <item>weak</item>
        <item>Middle</item>
        <item>Strong</item>
    </string-array>
    <string-array name="str_arr_sleep_mode_vals">
        <item>Off</item>
        <item>10 Minute</item>
        <item>20 Minute</item>
        <item>30 Minute</item>
        <item>60 Minute</item>
        <item>90 Minute</item>
        <item>120 Minute</item>
        <item>180 Minute</item>
        <item>240 Minute</item>
    </string-array>
    <string-array name="str_arr_pvr_mode_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_pic_pcimagemode">PC Image Mode</string>
    <string name="str_pic_autotune">Auto Tune</string>
    <string name="str_set_hdmicec_arc">HDMI_ARC</string>
    <string name="str_pic_pcimagemode_waiting">PC image is adjusting, please try later...</string>
    <string name="str_pic_pcimagemode_success">PC image adjusted success</string>
    <string name="str_pic_pcimagemode_failed">PC image adjusted fail</string>
    <string name="str_pic_clock">Clock</string>
    <string name="str_pic_phase">Phase</string>
    <string name="str_pic_horizontal_pos">Horizontal Position</string>
    <string name="str_pic_vertical_pos">Vertical Position</string>
    <string name="str_sound_sound_adjustment">Sound</string>
    <string name="str_sound_soundmode">Sound Mode</string>
    <string-array name="str_arr_sound_soundmode_vals">
        <item>Standard</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Sports</item>
        <item>User</item>
        
    </string-array>
    <string name="str_sound_bass">Low Pitch</string>
    <string name="str_sound_treble">High Pitch</string>
    <string name="str_sound_equalizer">Equilizer</string>
    <string name="str_sound_equalizer120hz">120Hz</string>
    <string name="str_sound_equalizer500hz">500Hz</string>
    <string name="str_sound_equalizer1.5khz">1.5KHz</string>
    <string name="str_sound_equalizer5khz">5KHz</string>
    <string name="str_sound_equalizer10khz">10KHz</string>
    <string name="str_sound_balance">Balance</string>
    <string name="str_sound_avc">AVC</string>
    <string name="str_sound_ad">AD</string>
    <string name="str_sound_autohoh">Auto HOH</string>
    <string name="str_sound_truehdbypass">Dolby TrueHD/DTS-HD</string>
    <string name="str_sound_srs">SRS</string>
    <string-array name="str_arr_sound_avc_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_surround">Surround</string>
    <string-array name="str_arr_sound_surround_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_spdifoutput">SPDIF Output</string>
    <string-array name="str_arr_sound_spdifoutput_vals">
        <item>PCM</item>
        <item>OFF</item>
        <item>RAW</item>
    </string-array>
    <string name="str_sound_separatehear">Alone</string>
    <string-array name="str_arr_sound_separatehear_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_3d_3d">3D</string>
    <string name="str_3d_self_adaptive_detecttriple">SelfAdaptive Detect</string>
    <string-array name="str_arr_3d_self_adaptive_detecttriple_vals">
        <item>Off</item>
        <item>Right Now</item>
        <item>When Source Change</item>
        <item>Real Time</item>
    </string-array>
    <string name="str_3d_self_adaptive_detectlevel">SelfAdaptive Level</string>
    <string-array name="str_arr_3d_self_adaptive_detectlevel_vals">
        <item>Low</item>
        <item>Middle</item>
        <item>High</item>
    </string-array>
    <string name="str_3d_conversion">3D Conversion</string>
    <string-array name="str_arr_3d_3dconversion_vals">
        <item>None</item>
        <item>SBS</item>
        <item>TB</item>
        <item>FP</item>
        <item>LA</item>
        <item>2D-3D</item>
        <item>Auto</item>
        <item>CB</item>
        <item>PA</item>
        <item>FA</item>
    </string-array>
    <string name="str_3d_3dto2d">3Dto2D</string>
    <string-array name="str_arr_3d_3dto2d_vals">
        <item>None</item>
        <item>SBS</item>
        <item>TB</item>
        <item>FP</item>
        <item>LA</item>
        <item>FA</item>
        <item>Auto</item>
    </string-array>
    <string name="str_3d_3ddepth">3D Depth</string>
    <string-array name="str_arr_3d_3ddepth_vals">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="str_3d_3doffset">3D Offset</string>
    <string-array name="str_arr_3d_3doffset_vals">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="str_3d_autostart">Auto Start</string>
    <string-array name="str_arr_3d_autostart_vals">
        <item>OFF</item>
        <item>2D</item>
        <item>3D</item>
    </string-array>
    <string name="str_3d_3doutputaspect">3D Output Aspect</string>
    <string-array name="str_arr_3d_3doutputaspect_vals">
        <item>Full</item>
        <item>4:3</item>
    </string-array>
    <string name="str_3d_lrswitch">LR View Switch</string>
    <string-array name="str_arr_3d_lrswitch_vals">
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string name="str_cha_antannatype">Antenna Type</string>
    <string name="str_cha_antannatype_air">Air</string>
    <string name="str_cha_antannatype_cable">Cable</string>
    <string-array name="str_arr_cha_antannatype">
        <item>DTMB</item>
        <item>DVB-C</item>
        <item>DVB-T</item>
        <item>MAX</item>
    </string-array>
    <string-array name="str_arr_cha_atsc_antannatype">
        <item>None</item>
        <item>Air</item>
        <item>Cable</item>
    </string-array>
    <string name="str_cha_channel">Channel</string>
    <string name="str_cha_autotuning">Auto Tuning</string>
    <string name="str_cha_dtvmanualtuning">DTV Manual Tuning</string>
    <string name="str_cha_atvmanualtuning">ATV Manual Tuning</string>
    <string name="str_cha_programedit">Program Edit</string>
    <string name="str_char_info_fav_yes">Fav_Program: Yes</string>
    <string name="str_char_info_fav_no">Fav_Program: No</string>
    <string name="str_cha_signalinfo">Signal Information</string>
    <string name="str_mainmenu_menu">Menu</string>
    <string name="str_ca_card_feed">Card Feed</string>
    <string name="str_ca_op_operator_id">Operator ID</string>
    <string name="str_pvr_file_system_title">PVR File System</string>
    <string name="str_pvr_file_system_select_disk">Select Disk</string>
    <string name="str_pvr_file_system_time_shift_size">Time Shift Size</string>
    <string name="str_pvr_file_system_format_start">Format Start</string>
    <string name="str_pvr_file_system_format_context">Success</string>
    <string name="str_pvr_file_system_speed_check">Speed Check</string>
    <string name="str_pvr_file_system_speed_context">complete</string>
    <string name="str_pvr_file_system_always_timeshift">Always Timeshift</string>
    <string name="str_pvr_file_system_always_context">On</string>
    <string name="str_pvr_is_standby">Standby</string>
    <string name="str_pvr_tip">Are you going to stop pvr recording, or go to standby recording?</string>
    <string name="str_player_stop">Stop</string>
    <string name="str_reminder_mode">Mode</string>
    <string name="str_reminder_date">Date</string>
    <string name="str_reminder_month">Month</string>
    <string name="str_reminder_hour">Hour</string>
    <string name="str_reminder_minute">Minute</string>
    <string name="str_reminder_channel">Channel</string>
    <string name="str_reminder_title">Reminder Settings</string>
    <string name="str_time_hour">Hour</string>
    <string name="str_time_minute">Minute</string>
    <string name="str_time_second">Second</string>
    <string name="str_root_alert_dialog_cancel">Cancel</string>
    <string name="email_theme">THEME</string>
    <string name="email_time">TIME</string>
    <string name="email_level">LEVEL</string>
    <string name="email_state">STATE</string>
    <string name="email_aid">[Red Key] DELETE [Green Key] DELETE ALL</string>
    <string name="email">EMAIL</string>
    <string name="str_ca_mg_child_or_parent_card1">CARD</string>
    <string name="str_ca_mg_delaytime1">DELAYTIME</string>
    <string name="str_ca_mg_lastfeedtime1">LAST FEED TIME</string>
    <string name="clean_J2T_value">Clean the input time value</string>
	<string name="bt_info_switch">Switch</string>
	<string name="bt_info_adjust">Adjust</string>
	<string name="bt_info_ok">Ok</string>
	<string name="bt_info_exit">Exit</string>
</resources>