<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="336dp"
    android:layout_gravity="center"
    android:background="@drawable/programme_img_info_bg"
    android:orientation="vertical" >

        <TextView
            android:text="@string/str_pvr_file_system_title"
            android:textSize="16dp"
            android:id="@+id/pvr_file_system_title"
            android:layout_width="267dip"
            android:layout_height="50dip"
            android:gravity="center"
            android:layout_marginTop="0dip">
        </TextView>
        <TextView
            android:text="@string/str_pvr_file_system_select_disk"
            android:id="@+id/pvr_file_system_select_disk"
            android:layout_width="267dip"
            android:layout_height="30dip"
            android:layout_marginTop="5dip"
            android:focusable="true"
            android:background="@drawable/button_state"
            android:gravity="center"></TextView>
        <TextView
            android:text="@string/str_pvr_file_system_time_shift_size"
            android:id="@+id/pvr_file_system_time_shift_size"
            android:layout_width="267dip"
            android:layout_height="30dip"
            android:focusable="true"
            android:background="@drawable/button_state"
            android:gravity="center"></TextView>
        <LinearLayout
            android:layout_height="wrap_content"
            android:id="@+id/pvr_file_system_format_layout"
            android:layout_width="match_parent"
            android:focusable="true"
            android:background="@drawable/button_state">
            <TextView
                android:text="@string/str_pvr_file_system_format_start"
                android:id="@+id/pvr_file_system_format_start"
                android:layout_width="133dip"
                android:layout_height="30dip"
                android:gravity="center"></TextView>
            <TextView
                android:text="@string/str_pvr_file_system_format_context"
                android:id="@+id/pvr_file_system_format_context"
                android:layout_width="133dip"
                android:layout_height="30dip"
                android:gravity="center"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:id="@+id/pvr_file_system_speed_layout"
            android:layout_width="match_parent"
            android:focusable="true"
            android:background="@drawable/button_state">
            <TextView
                android:text="@string/str_pvr_file_system_speed_check"
                android:id="@+id/pvr_file_system_speed_check"
                android:layout_width="133dip"
                android:layout_height="30dip"
                android:gravity="center"></TextView>
            <TextView
                android:text="@string/str_pvr_file_system_speed_context"
                android:id="@+id/pvr_file_system_speed_context"
                android:layout_width="133dip"
                android:layout_height="30dip"
                android:gravity="center"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:id="@+id/pvr_file_system_always_layout"
            android:layout_width="match_parent"
            android:background="@drawable/button_state"
            android:focusable="true">
            <TextView
                android:text="@string/str_pvr_file_system_always_timeshift"
                android:id="@+id/pvr_file_system_always_timeshift"
                android:layout_width="133dip"
                android:layout_height="30dip"
                android:gravity="center"></TextView>
            <TextView
                android:text="@string/str_pvr_file_system_always_context"
                android:id="@+id/pvr_file_system_always_context"
                android:layout_width="133dip"
                android:layout_height="30dip"
                android:gravity="center"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="0dip">
            <ImageView
                android:layout_height="wrap_content"
                android:src="@drawable/common_img_ok"
                android:layout_width="wrap_content"></ImageView>
            <TextView
                android:text="@string/str_mainmenu_menu"
                android:layout_width="wrap_content"
                android:layout_height="24dip"
                android:layout_marginLeft="180dip"></TextView>
        </LinearLayout>
    

</LinearLayout>
