<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/pic_mode_sty_menu"
    android:background="@drawable/picture_mode_img_bg" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/str_pic_pcimagemode"
        android:textColor="#ffffff"
        android:textSize="16dp" >
    </TextView>

    <!-- For Clock -->

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/linearlayout_pic_clock"
        style="@style/pic_mode_sty_combo_btn" >

        <ImageView style="@style/pic_mode_sty_leftarrow" >
        </ImageView>

        <TextView
            style="@style/pic_image11"
            android:text="@string/str_pic_clock" />

        <TextView style="@style/pic_image22" />

        <ImageView style="@style/pic_mode_sty_rightarrow" >
        </ImageView>
    </LinearLayout>

    <!-- For Phase -->

    <LinearLayout
        android:id="@+id/linearlayout_pic_phase"
        style="@style/pic_mode_sty_combo_btn" >

        <ImageView style="@style/pic_mode_sty_leftarrow" >
        </ImageView>

        <TextView
            style="@style/pic_image11"
            android:text="@string/str_pic_phase" />

        <TextView style="@style/pic_image22" />

        <ImageView style="@style/pic_mode_sty_rightarrow" >
        </ImageView>
    </LinearLayout>

    <!-- For  Horizontal position -->

    <LinearLayout
        android:id="@+id/linearlayout_pic_horizontalpos"
        style="@style/pic_mode_sty_combo_btn" >

        <ImageView style="@style/pic_mode_sty_leftarrow" >
        </ImageView>

        <TextView
            style="@style/pic_image11"
            android:text="@string/str_pic_horizontal_pos" />

        <TextView style="@style/pic_image22" />

        <ImageView style="@style/pic_mode_sty_rightarrow" >
        </ImageView>
    </LinearLayout>

    <!-- For  Vertical position -->

    <LinearLayout
        android:id="@+id/linearlayout_pic_verticalpos"
        style="@style/pic_mode_sty_combo_btn" >

        <ImageView style="@style/pic_mode_sty_leftarrow" >
        </ImageView>

        <TextView
            style="@style/pic_image11"
            android:text="@string/str_pic_vertical_pos" />

        <TextView style="@style/pic_image22" />

        <ImageView style="@style/pic_mode_sty_rightarrow" >
        </ImageView>
    </LinearLayout>

    <!-- PC Image Mode Back -->

    <LinearLayout
        android:id="@+id/linearlayout_pic_pcimagemodeback"
        style="@style/button_style" >

        <TextView
            style="@style/button_textview_style"
            android:text="@string/str_pic_autotune" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>