<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tvsetting="http://schemas.android.com/apk/res/com.mstar.tv.tvplayer.ui"
    android:id="@+id/pvr_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >

    <com.mstar.tv.tvplayer.ui.pvr.TimeChooser
        android:id="@+id/pvr_menu_dialog_hours"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        tvsetting:chooseType="hour"
        android:gravity="center"
        android:hint="@string/str_time_hour"
        tvsetting:hourLimit="100"
        android:imeOptions="actionDone"
        android:inputType="number" />

    <ImageView
        android:id="@+id/editText1"
        android:layout_width="6dip"
        android:layout_height="wrap_content"
        android:src="@drawable/schedule_list_img_time" />

    <com.mstar.tv.tvplayer.ui.pvr.TimeChooser
        android:id="@+id/pvr_menu_dialog_minutes"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        tvsetting:chooseType="minute"
        android:gravity="center"
        android:hint="@string/str_time_minute"
        android:imeOptions="actionDone"
        android:inputType="number" />

    <ImageView
        android:id="@+id/editText1"
        android:layout_width="6dip"
        android:layout_height="wrap_content"
        android:src="@drawable/schedule_list_img_time" />

    <com.mstar.tv.tvplayer.ui.pvr.TimeChooser
        android:id="@+id/pvr_menu_dialog_seconds"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        tvsetting:chooseType="second"
        android:gravity="center"
        android:hint="@string/str_time_second"
        android:imeOptions="actionDone"
        android:inputType="number" />
    
    <Button
        android:id="@+id/ResetJ2TBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/clean_J2T_value" />

</LinearLayout>